--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,7 +3,7 @@
 <%- include("partials/navbar") %>
 
 
-<div class="container-fluid">
+<div class="container">
     <%- include("partials/noteAdd") %> 
 
     <%- include("partials/noteCreate") %>
