--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,11 +2,18 @@ body{
   background-color: #a8df65;
 }
 
+.loginbar{
+  margin-right: 0rem;
+  margin-left: 0rem;
+  margin-top: 1rem;
+}
+
+
 
 
 .heading{
   text-align: center;
-  margin-left: 2rem;
+  margin-left: 1rem;
 }
 .description{
   color: #fff;
@@ -19,8 +26,10 @@ body{
   position: relative;
 }
 
+
 .notebook{
-  font-size: 6rem;
+  font-size: 5rem;
+  width: 100%;
   color: #fff;
   text-align: center;
 }
@@ -29,49 +38,17 @@ body{
   color: #fff;
 
 }
-.container-fluid{
+/* .container-fluid{
   width: 100%;
   height: 100%;  
-}
+} */
 
 .brandLogo{
   margin-top: 10rem;
 }
 
-.top{
-  height:2rem;
-  margin-left: 50px;
-  margin-bottom: 0px;
-  border-radius:2px;
-  border: 0px;
 
-}
 
-.middle{
-  height:2rem;
-  margin-bottom:0px;
-  margin-left: 5px;
-  border-radius: 2px;
-  border: 0px;
-}
-
-.bottom{
-  height:2rem;
-  margin-top:4px;
-  margin-bottom: 0px;
-  margin-left: 50px;
-  border-radius: 2px;
-  border: 0px;
-}
-
-.password{
-  height:2rem;
-  margin-top:4px;
-  margin-bottom: 0px;
-  margin-left: 50px;
-  border-radius: 2px;
-  border: 0px;
-}
 
 .btn-signup{
   position: relative;
@@ -101,19 +78,15 @@ body{
   border: 0px;
 }
 
-.btn-login{
+/* .btn-login{
   position: relative;
  
   margin-bottom: 5px;
   padding-top: 0px;
   padding-bottom: 0px;
-}
+} */
 
-.login{
-  text-align: right;
-  margin-right: 186px;
-  margin-top: 1rem;
-}
+
 
 
 .color{
@@ -121,7 +94,7 @@ body{
 }
 
 .container{
-  width:60%;
+  
   text-align: center;
 }
 
