--- a/views/partials/noteAdd.ejs
+++ b/views/partials/noteAdd.ejs
@@ -1,5 +1,5 @@
 
-  <div class="container-fluid">      
+  <div class="container">      
    
       <form  class="form-inline" action="/note" method="POST">
                  
