--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
        </div>
 
         <!-- SignUp bar -->
-        <div class="col d-flex justify-content-center" >                
+        <div class="col d-flex justify-content-center d-sm-none d-md-block" >                
 
             
              <form class="" action="/signup" method="post">
