responsiveness fix small screen

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
        </div>
 
         <!-- SignUp bar -->
-        <div class="col d-lg-flex justify-content-center d-none d-sm-none d-md-block " >                
+        <div class="col d-lg-flex justify-content-center d-none d-lg-block " >                
 
             
              <form class="" action="/signup" method="post">
@@ -85,8 +85,8 @@
      </div>
    </div>
 
-   <div class="container-fluid signupbar d-sm-flex 	">
-       <div class="form-row form-group ">
+   <div class="container signupbar   ">
+       <div class="form-row form-group d-lg-none ">
           <div class="col-sm-12">
             <div class="form-inline d-flex justify-content-center">
               <div class="form-row p-1 m-2">
