signupbar design change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,19 +85,16 @@
      </div>
    </div>
 
-   <div class="container signupbar   ">
-       <div class="form-row form-group d-lg-none ">
-          <div class="col-sm-12">
-            <div class="form-inline d-flex justify-content-center">
-              <div class="form-row p-1 m-2">
-                <h5 class="description">New User ? </h5>
+   <div class="container signupbar">
+       <div class="d-lg-none">
+          <div class="col-sm col-md">
+              <div class="p-1 m-2 d-flex justify-content-center" >
+                <h6 class="description">New user? Create your first notebook. </h6>
               </div>              
-              <div class="form-row p-1 m-2 ">
-                <a class="btn btn-success btn-block "href="" role="button">SignUp</a>
+              <div class="p-1 m-2">
+                <a class="btn btn-success btn-block "href="/signup" role="button">SignUp</a>
+              </div>        
               </div>
-             
-            </div>           
-          </div>
        </div>
    </div>
 
