--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,10 @@
    <nav class="navbar-fixed-top">
 
       <div class="loginbar form-row d-flex flex-row-reverse">
-
+       
         <div class="col col-lg-6 col-md col-sm d-flex justify-content-left">
          
-          <form class=" " action="/login" method="post">
+          <form class="form-group" action="/login" method="post">
             <div class="form-inline ">
             <div class="col-lg col-sm col-md p-1 ">
               <div class="d-flex flex-row mt-1 ml-1 textColor">
@@ -41,14 +41,14 @@
 
 
    <div class="container brandLogo">
-     <div class="row">
+     <div class="form-row">
 
         <!-- Product Name -->
        <div class="col heading ">
         
-          <h1 class="notebook d-none d-lg-block ">The NoteBook</h1>
-          <h1 class="notebookSM d-lg-none ">The NoteBook</h1>
-          <h5 class="description">Take a Note</h5>
+          <h1 class="notebook d-lg-flex d-none d-lg-block ">The NoteBook</h1>
+          <h1 class="notebookSM d-sm-flex d-lg-none ">The NoteBook</h1>
+          <h5 class="textColor">Drop a Note</h5>
          
        </div>
 
@@ -57,34 +57,72 @@
 
             
              <form class="" action="/signup" method="post">
-              <div class="form-group">
+              <div class="">
                <!-- Name input form -->
-               <div class="row ">
-                 <input class="form-control" type="text" name="fname"  pattern="[A-Za-z]" placeholder="First Name" size="18" required autofocus>
-                 <input class="form-control" type="text" name="lname" pattern="[A-Za-z]" placeholder="Last Name" size="20" required>
-              </div>
-   
-              <!-- Email input form -->
-              <div class="row">
-                <input class="form-control" type="email" name="username" size="44" placeholder="Email" autocomplete="off" required>
-              </div>
-   
-              <!-- Password input form -->
-              <div class="row">
-                <input class="form-control" type="password" name="password" size="44" autocomplete="off" placeholder="Password (min 8 characters)" maxlength="12" minlength="8" required>
-              </div>
-   
-              <!-- Password Re enter form -->
-              <div class="row">
-                <input class="form-control" type="password" name="passwordMatch" size="44" autocomplete="off" placeholder="Re-enter Password" maxlength="12" minlength="8" required>
-              </div>
-   
-               <!-- Submit button  -->
-              <div class="row">
-                <button class="  btn btn-outline-success btn-signup" type="submit" name="submit">Sign Up</button>
-              </div>
-            </div>
-            </form>
+               <div class=" form-inline col-lg col-sm col-md m-0">
+                 <div class=" mr-1">
+                  <div class="d-flex flex-row mt-1 ml-1 textColor">
+                    <label for="firstName">First Name</label>
+                  </div>
+                   <div class="d-flex flex-row-reverse">
+                      <input class="form-control" type="text" name="fname" id="firstName"  placeholder="First Name" size="18" required autofocus>
+                   </div>
+                 </div>
+                 <div class="ml-1">
+                  <div class="d-flex flex-row mt-1 ml-1 textColor">
+                    <label for="lastName">Last Name</label>
+                  </div>
+                   <div class="d-flex flex-row-reverse">
+                    <input class="form-control" type="text" name="lname" id="lastName" placeholder="Last Name" size="18" required>
+                   </div>
+                 </div>                
+                 
+                </div>
+
+                <div class=" form-inline col-lg col-sm col-md m-0">
+                  <div class="m-0">
+                    <div class="d-flex flex-row mt-1 ml-1 textColor">
+                      <label for="email">Email</label>
+                    </div>
+                     <div class="d-flex flex-row-reverse">
+                      <input class="form-control" type="email" name="username" id="email" size="46" placeholder="Email" autocomplete="off" required>
+                     </div>
+                   </div>
+                </div>
+
+
+                <div class=" form-inline col-lg col-sm col-md m-0">
+                  <div class="">
+                    <div class="d-flex flex-row mt-1 ml-1 textColor">
+                      <label for="password">Password (Min 8 characters)</label>
+                    </div>
+                     <div class="d-flex flex-row-reverse">
+                      <input class="form-control" type="password" name="password" id="password" size="46" autocomplete="off" placeholder="Password (min 8 characters)" minlength="8" required>
+                     </div>
+                   </div>
+                </div>
+
+                <div class=" form-inline col-lg col-sm col-md m-0">
+                  <div class="">
+                    <div class="d-flex flex-row mt-1 ml-1 textColor">
+                      <label for="reEnterPassword">Re-enter Password</label>
+                    </div>
+                     <div class="d-flex flex-row-reverse">
+                      <input class="form-control" type="password" name="passwordMatch" id="reEnterPassword" size="46" autocomplete="off" placeholder="Re-enter Password" minlength="8" required>
+                     </div>
+                   </div>
+                </div>
+
+                <div class="d-flex flex-row col-lg-4 mt-2">
+                  <div class="">
+                    <button class="form-control btn btn-success btn-md" type="submit" name="submit">Sign Up</button>
+                  </div>
+               </div>
+
+                            
+                 
+              
+               </form>
               
         </div>
        
