new user text color change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -135,7 +135,7 @@
        <div class="d-lg-none">
           <div class="col-sm col-md">
               <div class="p-1 m-2 d-flex justify-content-center" >
-                <h6 class="description">New user? Create your first notebook. </h6>
+                <h6 class="textColor">New user? Create your first notebook. </h6>
               </div>              
               <div class="p-1 m-2">
                 <a class="btn btn-success btn-block "href="/signup" role="button">SignUp</a>
