new user signup form remove form-inline

--- a/views/signuppage.ejs
+++ b/views/signuppage.ejs
@@ -9,13 +9,13 @@
          <div class="container-fluid d-lg-none" style="text-align: center;">                
              
             <div style="margin-top: 3rem; margin-bottom: 2rem; text-align:center;">
-                <h5 class="textColor">Signup and drop your notes.</h5>
+                <h5 class="textColor">Sign Up to drop your notes</h5>
             </div>
             
             <form class="" action="/signup" method="post">
              <div style="display: inline-block;">
               <!-- Name input form -->
-              <div class=" form-inline  col-lg col-sm col-md m-0">
+              <div class="col-lg col-sm col-md m-0">
                 <div class=" mr-1">
                  <div class="d-flex flex-row mt-1 ml-1 textColor">
                    <label for="firstName">First Name</label>
@@ -35,7 +35,7 @@
                 
                </div>
 
-               <div class=" form-inline col-lg col-sm col-md m-0">
+               <div class="col-lg col-sm col-md m-0">
                  <div class="m-0">
                    <div class="d-flex flex-row mt-1 ml-1 textColor">
                      <label for="email">Email</label>
@@ -47,7 +47,7 @@
                </div>
 
 
-               <div class=" form-inline col-lg col-sm col-md m-0">
+               <div class="col-lg col-sm col-md m-0">
                  <div class="">
                    <div class="d-flex flex-row mt-1 ml-1 textColor">
                      <label for="password">Password (Min 8 characters)</label>
@@ -58,7 +58,7 @@
                   </div>
                </div>
 
-               <div class=" form-inline col-lg col-sm col-md m-0">
+               <div class="col-lg col-sm col-md m-0">
                  <div class="">
                    <div class="d-flex flex-row mt-1 ml-1 textColor">
                      <label for="reEnterPassword">Re-enter Password</label>
