new user signup form add signin button

--- a/views/signuppage.ejs
+++ b/views/signuppage.ejs
@@ -82,5 +82,20 @@
              
        </div>
 
+       <div class="container-fluid d-lg-none mt-4" style="text-align: center;">
+
+        <div style="display: inline-block;">
+            <div style="margin-top: 3rem; margin-bottom: 2rem; text-align:center;">
+                <h5 class="textColor">Or, Login into your account</h5>
+            </div>
+            <div class="d-flex flex-row">
+                <div class="col-sm">
+                  <button class=" btn btn-success btn-block" type="submit" name="submit">Sign In</button>
+                </div>
+             </div>
+        </div>
+
+    </div>
+
 
 <%- include("partials/footer") %>
