--- a/views/signuppage.ejs
+++ b/views/signuppage.ejs
@@ -90,7 +90,7 @@
             </div>
             <div class="d-flex flex-row">
                 <div class="col-sm">
-                  <button class=" btn btn-success btn-block" type="submit" name="submit">Sign In</button>
+                    <a class="btn btn-success btn-block "href="/signupPage" role="button">Sign In</a>
                 </div>
              </div>
         </div>
