--- a/views/signuppage.ejs
+++ b/views/signuppage.ejs
@@ -82,7 +82,7 @@
              
        </div>
 
-       <div class="container d-lg-none mt-6" style="text-align: center; margin-top: 5rem;">
+       <div class="container d-lg-none mt-6" style="text-align: center; margin-top: 5rem; margin-bottom: 5rem;">
 
         <div style="display: inline-block;">
             <div style="margin-top: 3rem; margin-bottom: 2rem; text-align:center;">
