--- a/views/partials/noteCreate.ejs
+++ b/views/partials/noteCreate.ejs
@@ -16,7 +16,7 @@
             <div class="card-body" style="height: 10rem;">  
 
               <p class="card-text"><%=note.noteContent.substring(0,55)+"..."%>
-              <a href="/Read/<%=note._id%>">Read More</a>
+              <a href="/view/<%=note._id%>">Read More</a>
               </p>
               
             </div> 
