--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,11 +34,6 @@ body{
 
 
 
-.heading{
-  text-align: center;
-  /* margin-left: 1rem; */
-}
-
 /* .description{  
   color: #fff;
   margin-top: 1rem;
@@ -53,10 +48,11 @@ body{
 
 
 .notebook{
-  font-size: 5rem;
+  font-size: 10rem;
   width: 100%;
   color: #fff;
   text-align: center;
+  justify-content: center;
 }
 
 .notebookSM{
@@ -65,6 +61,7 @@ body{
   width: 100%;
   color: #fff;
   text-align: center;
+  justify-content: center;
 }
 
 
@@ -72,10 +69,6 @@ body{
   color: #fff;
 
 }
-/* .container-fluid{
-  width: 100%;
-  height: 100%;  
-} */
 
 .brandLogo{
   margin-top: 8rem;
