--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,11 +44,22 @@
      <div class="form-row">
 
         <!-- Product Name -->
-       <div class="col heading ">
-        
-          <h1 class="notebook d-lg-flex d-none d-lg-block ">The NoteBook</h1>
-          <h1 class="notebookSM d-sm-flex d-lg-none">The NoteBook</h1>
-          <h5 class="textColor">Drop a Note</h5>
+       <div class="col justify-content-center ">
+          
+        <div class="notebook d-lg-flex d-none d-lg-block">
+           <h1 style="font-size: 5rem;">The NoteBook</h1>
+        </div>
+
+        <div class="notebookSM d-sm-flex d-lg-none">
+          <h1>The NoteBook</h1>
+       </div>
+
+       <div class="">
+        <h5 class="textColor">Drop a Note</h5>
+     </div>
+         
+          
+          
          
        </div>
 
