--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
    <!-- Login Bar -->
    <nav class="navbar-fixed-top">
 
-      <div class="loginbar form-row d-flex flex-row-reverse">
+      <div class=" form-row d-flex flex-row-reverse">
        
-        <div class="col col-lg-6 col-md col-sm d-flex justify-content-left">
+        <div class=" loginbar col col-lg-6 col-md col-sm d-flex justify-content-left">
          
           <form class="form-group" action="/login" method="post">
             <div class="form-inline ">
@@ -40,27 +40,24 @@
    </nav>
 
 
-   <div class="container brandLogo">
+   <div class="container-fluid brandLogo">
      <div class="form-row">
 
         <!-- Product Name -->
        <div class="col justify-content-center ">
           
-        <div class="notebook d-lg-flex d-none d-lg-block">
+         <div class="notebook d-lg-flex d-none d-lg-block">
            <h1 style="font-size: 5rem;">The NoteBook</h1>
-        </div>
+         </div>
 
-        <div class="notebookSM d-sm-flex d-lg-none">
+         <div class="notebookSM d-sm-flex d-lg-none">
           <h1>The NoteBook</h1>
-       </div>
+         </div>
 
-       <div class="">
-        <h5 class="textColor">Drop a Note</h5>
-     </div>
-         
-          
-          
-         
+        <div class="d-flex" style="justify-content: center;">
+         <h5 class="textColor">Drop a Note</h5>
+        </div>      
+  
        </div>
 
         <!-- SignUp bar -->
