--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -173,3 +173,12 @@ body{
      margin: auto;
      margin-top: 2rem;     
     }
+
+    @media screen and (max-width:576px){
+      .noteAddArea{
+        width: 100%;
+        position: relative;
+        margin: auto;
+        margin-top: 2rem;     
+       }
+    }
