--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -21,7 +21,7 @@
          <span class="navbar-toggler-icon"></span>    
          </a>
 
-         <div class="dropdown-menu" aria-labelledby="logout">
+         <div class="dropdown-menu logout" aria-labelledby="logout">
            <a class="dropdown-item" href="/logout">Logout</a>
         </div>
       </div>
