--- a/views/partials/noteAdd.ejs
+++ b/views/partials/noteAdd.ejs
@@ -1,9 +1,9 @@
 
-  <div class="container-fluid">      
+  <div class="container">      
    
       <form  class="form-inline" action="/note" method="POST">
                  
-         <div class=" container dropdown noteAddArea input-group">            
+         <div class="container dropdown noteAddArea input-group">            
             
             <input  class="form-control" type="text" name="noteTitle"  data-toggle="dropdown" data-target="dropdown-menu" placeholder="Add Note Title" size="64" >
             
